--- a/Bem-vindo.html
+++ b/Bem-vindo.html
@@ -9,13 +9,9 @@
 <body>
     <div class="container">
         
-        <div>
-            <h1 class="title">Bem-Vindo a nossa Loja!!</h1>
+        <div class="titulo">
+            <h1>Bem-Vindo a nossa Loja!!</h1>
         </div>
-
-
-
-
         <button class="Proxima-Pag"><a href="tela-inicial.html" target="_blank">Próxima Página</a></button>
     </div>
 </body>
