--- a/Bem-vindo.html
+++ b/Bem-vindo.html
@@ -11,6 +11,7 @@
         
         <div class="titulo">
             <h1>Bem-Vindo a nossa Loja!!</h1>
+            <p>Somos uma loja que disponibiliza filmes do pica-pau para alugar.</p>
         </div>
         <button class="Proxima-Pag"><a href="tela-inicial.html" target="_blank">Próxima Página</a></button>
     </div>
