--- a/cadastro.html
+++ b/cadastro.html
@@ -7,34 +7,36 @@
     <title>Cadastre-se</title>
 </head>
 <body>
-    <form class="cadastro">
-        <div class="form-cadastro">
-            <input type="text" placeholder="Nome" class="Nome-Cliente">
-        </div>
-        
-        <div class="form-cadastro">
-            <input type="text" placeholder="Sobrenome" class="Sobrenome-Cliente">
-        </div>
+    <div class="form-container">
+        <form class="cadastro">
+            <div class="form-cadastro">
+                <input type="text" placeholder="Nome" class="Nome-Cliente">
+            </div>
+            
+            <div class="form-cadastro">
+                <input type="text" placeholder="Sobrenome" class="Sobrenome-Cliente">
+            </div>
 
-        <div class="form-cadastro">
-            <input type="text" placeholder="Enderço" class="Endereco-Cliente"> 
-        </div>
+            <div class="form-cadastro">
+                <input type="text" placeholder="Endereço" class="Endereco-Cliente">
+            </div>
 
-        <div class="form-cadastro">
-            <input type="text" placeholder="Número de Telefone" class="Numero-Cliente">
-        </div>
+            <div class="form-cadastro">
+                <input type="text" placeholder="Número de Telefone" class="Numero-Cliente">
+            </div>
 
-        <div class="form-cadastro">
-            <input type="email" placeholder="Email" class="Email-Cliente">
-        </div>
+            <div class="form-cadastro">
+                <input type="email" placeholder="Email" class="Email-Cliente">
+            </div>
 
-        <div class="form-cadastro">
-            <input type="password" placeholder="Digite sua senha" class="Senha-Cliente">
-        </div>
+            <div class="form-cadastro">
+                <input type="password" placeholder="Digite sua senha" class="Senha-Cliente">
+            </div>
 
-        <div class="Envia-Cadastro">
-            <button class="cadastro-enviado">Enviar</button>
-        </div>
-    </form>
+            <div class="Envia-Cadastro">
+                <button class="cadastro-enviado">Enviar</button>
+            </div>
+        </form>
+    </div>
 </body>
 </html>
