--- a/tela-inicial.html
+++ b/tela-inicial.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Aluguel de Filmes do Pica-Pau</title>
     <link rel="stylesheet" href="tela-inicial.css">
-    <title>Filmes do Pica-Pau</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Aluguel de Filmes do Pica-Pau</h1>
+    </header>
+    <div class="container">
+        <div class="movie-card">
+            <img src="pica-pau-filme.jpg" alt="">
+            <h3>O Pássarinho</h3>
+            <p>Um filme de comédia que retrata a vida de um pássaro.</p>
+            <button>Alugar</button>
+        </div>
+        <div class="movie-card">
+            <img src="pica-pau-filme.jpg" alt="">
+            <h3>O Pássarinho</h3>
+            <p>Um filme de comédia que retrata a vida de um pássaro.</p>
+            <button>Alugar</button>
+        </div>
+    </div>
 </body>
 </html>
