--- a/Bem-vindo.html
+++ b/Bem-vindo.html
@@ -13,7 +13,7 @@
             <h1>Bem-Vindo a nossa Loja!!</h1>
             <p>Somos uma loja que disponibiliza filmes do pica-pau para alugar.</p>
         </div>
-        <button class="Proxima-Pag"><a href="tela-inicial.html" target="_blank">Próxima Página</a></button>
+        <a href="login.html" target="_blank"><button class="Proxima-Pag">Próxima Página</button></a>
     </div>
 </body>
 </html>
