--- a/cadastro.html
+++ b/cadastro.html
@@ -7,7 +7,10 @@
     <title>Cadastre-se</title>
 </head>
 <body>
+
+
     <div class="form-container">
+        <h1 class="list-cad">Cadastre-se</h1>
         <form class="cadastro">
             <div class="form-cadastro">
                 <input type="text" placeholder="Nome" class="Nome-Cliente">
@@ -34,7 +37,7 @@
             </div>
 
             <div class="Envia-Cadastro">
-                <button class="cadastro-enviado">Enviar</button>
+                <button class="cadastro-enviado"><a href="login.html">Enviar</a></button>
             </div>
         </form>
     </div>
