--- a/tela-inicial.html
+++ b/tela-inicial.html
@@ -3,24 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>Aluguel de Filmes do Pica-Pau</title>
     <link rel="stylesheet" href="tela-inicial.css">
 </head>
 <body>
     <header>
         <h1>Aluguel de Filmes do Pica-Pau</h1>
+       <img src="carrinho de compra.png" class="cart-img">
     </header>
     <div class="container">
         <div class="movie-card">
-            <img src="pica-pau-filme.jpg" alt="">
-            <h3>O Pássarinho</h3>
+            <img src="filme1.jpg" alt="">
+            <h3>Pica-Pau Uma viajem perfeita</h3>
             <p>Um filme de comédia que retrata a vida de um pássaro.</p>
+            <h1>R$ 80,00</h1>
             <button>Alugar</button>
         </div>
         <div class="movie-card">
-            <img src="pica-pau-filme.jpg" alt="">
-            <h3>O Pássarinho</h3>
+            <img src="filme2.jpg" alt="">
+            <h3>Pica-Pau Um dia de Babá</h3>
             <p>Um filme de comédia que retrata a vida de um pássaro.</p>
+            <h1>R$ 80,00</h1>
+            <button>Alugar</button>
+        </div>
+        <div class="movie-card">
+            <img src="filme 3.jpg" alt="">
+            <h3>Pica-Pau O filme</h3>
+            <p>Um filme de comédia que retrata a vida de um pássaro.</p>
+            <h1>R$ 80,00</h1>
+            <button>Alugar</button>
+        </div>
+        <div class="movie-card">
+            <img src="filme4.jpg" alt="">
+            <h3>Pica-Pau A Casa na Árvore</h3>
+            <p>Um filme de comédia que retrata a vida de um pássaro.</p>
+            <h1>R$ 80,00</h1>
+            <button>Alugar</button>
+        </div>
+        <div class="movie-card">
+            <img src="filme5.jpg" alt="">
+            <h3>Pica-Pau O Inverno está chegando</h3>
+            <p>Um filme de comédia que retrata a vida de um pássaro.</p>
+            <h1>R$ 80,00</h1>
+            <button>Alugar</button>
+        </div>
+        <div class="movie-card">
+            <img src="filme 6.jpg" alt="">
+            <h3>Pica-Pau Fazendo novos Amigos</h3>
+            <p>Um filme de comédia que retrata a vida de um pássaro.</p>
+            <h1>R$ 80,00</h1>
+            <button>Alugar</button>
+        </div>
+        <div class="movie-card">
+            <img src="filme 7.jpg" alt="">
+            <h3>Pica-Pau A grande fuga</h3>
+            <p>Um filme de comédia que retrata a vida de um pássaro.</p>
+            <h1>R$ 80,00</h1>
             <button>Alugar</button>
         </div>
     </div>
