--- a/login.html
+++ b/login.html
@@ -29,10 +29,10 @@
                 <a href="#">Esqueceu a senha?</a>
             </div>
 
-            <button type="submit" class="btn" target="_blank"><a href="Bem-vindo.html">Login</a></button>
+            <button type="submit" class="btn"><a href="tela-inicial.html"  target="_blank">Login</a></button>
 
             <div class="register-link">
-                <p>Não tem uma conta? <a href="cadastro.html">Registre-se</a></p>
+                <p>Não tem uma conta? <a href="cadastro.html" target="_blank">Registre-se</a></p>
             </div>
         </form>
     </div>
