--- a/Bem-vindo.html
+++ b/Bem-vindo.html
@@ -13,6 +13,7 @@
             <h1>Bem-Vindo a nossa Loja!!</h1>
             <p>Somos uma loja que disponibiliza filmes do pica-pau para alugar.</p>
         </div>
+        <h2>Nosso Endereço Rua João do Mato Número 389</h2>
         <a href="login.html" target="_blank"><button class="Proxima-Pag">Próxima Página</button></a>
     </div>
 </body>
