--- a/cadastro.html
+++ b/cadastro.html
@@ -37,7 +37,8 @@
             </div>
 
             <div class="Envia-Cadastro">
-                <button class="cadastro-enviado"><a href="login.html">Enviar</a></button>
+                <button class="cadastro-enviado"><a href="Bem-vindo.html">Enviar</a></button>
+                <button class="cancela-cadastro"><a href="login.html">Voltar</a></button>
             </div>
         </form>
     </div>
