--- a/login.html
+++ b/login.html
@@ -10,18 +10,16 @@
 </head>
 <body>
 
-    <div class="wrapper" > 
-        <form action="">
+    <div class="wrapper"> 
+        <form id="loginForm" action="">
             <h1>Login</h1>
             <div class="input-box"> 
-                <input type="text" placeholder="Username"
-                required>
+                <input id="username" type="text" placeholder="Username" required>
                 <i class='bx bxs-user'></i>
             </div>
             <div class="input-box">
-                <input type="password"
-                placeholder="password" required>
-                <i class='bx bxs-lock-alt' ></i>
+                <input id="password" type="password" placeholder="Password" required>
+                <i class='bx bxs-lock-alt'></i>
             </div>
 
             <div class="remember-forgot">
@@ -29,13 +27,15 @@
                 <a href="#">Esqueceu a senha?</a>
             </div>
 
-            <button type="submit" class="btn"><a href="tela-inicial.html"  target="_blank">Login</a></button>
+            <button type="submit" class="btn">Login</button>
 
             <div class="register-link">
-                <p>Não tem uma conta? <a href="cadastro.html" target="_blank">Registre-se</a></p>
+                <p>Não tem uma conta? <a href="cadastro.html">Registre-se</a></p>
             </div>
+            <p id="errorMessage" style="color: red; display: none;">Usuário ou senha incorretos</p>
         </form>
     </div>
 
+    <script src="login.js"></script>
 </body>
 </html>
