--- a/aa/index.html
+++ b/aa/index.html
@@ -17,9 +17,12 @@
         <button class="btn"><i class='bx bx-cart'></i></button>
     </header>
 
-<div class="container">
+<div class="container" id="dropdown">
     <nav class="sidebar" id="sidebar">
         <ul>
+            <br>
+            <br>
+            <br>
             <li><a href="#">Home</a></li>
             <li><a href="#">Sobre</a></li>
             <li><a href="#">Trabalhe conosco</a></li>
@@ -37,6 +40,24 @@
     <a class = "T" href="#">Telefone</a>
     <a class = "F" href="#">Facebook</a>
 </div>
+<ul class="slider">
+    <li class="vans">
+          <input type="radio" id="slide1" name="slide" checked>
+          <label for="slide1"></label>
+          <img src="vans.jpg" />
+    </li>
+    <li class="adidas">
+          <input type="radio" id="slide2" name="slide">
+          <label for="slide2"></label>
+          <img src="adidas.jpg"/>
+    </li>
+    <li class="nike">
+          <input type="radio" id="slide3" name="slide">
+          <label for="slide3"></label>
+          <img src="nike.jpg" />
+    </li>
+</ul>
+
 <script src="script.js"></script>
 </body>
 </html>
