--- a/aa/index.html
+++ b/aa/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>UAUAUAUAUA</title>
+    <title>Lojas ZINCHENCKO</title>
 </head>
 <body>
     <header class="topo">
@@ -32,9 +32,7 @@
 </div>
 
 
-<footer class="rodape">
-    
-</footer>
+<footer class="rodape"></footer>
 <div>
     <a  class = "I" href="#">Instagram</a>
     <a class = "T" href="#">Telefone</a>
@@ -55,6 +53,20 @@
           <input type="radio" id="slide3" name="slide">
           <label for="slide3"></label>
           <img src="nike.jpg" />
+    </li>
+</ul>
+
+<ul class="slider-2">
+    <li class="hocks">
+        <input type="radio" id="hocks-1" name="slide">
+        <label for="tela1"></label>
+        <img src="nike.jpg"/>
+    </li>
+
+    <li class="hocks">
+        <input type="radio" id="hocks-1" name="slide">
+        <label for="tela1"></label>
+        <img src="nike.jpg"/>
     </li>
 </ul>
 
