--- a/aa/index.html
+++ b/aa/index.html
@@ -23,7 +23,7 @@
             <br>
             <br>
             <br>
-            <li><a href="#">Home</a></li>
+            <li><a href="Home.html">Home</a></li>
             <li><a href="#">Sobre</a></li>
             <li><a href="#">Trabalhe conosco</a></li>
             <li><a href="#">Promoções</a></li>
@@ -56,17 +56,24 @@
     </li>
 </ul>
 
-<ul class="slider-2">
-    <li class="hocks">
-        <input type="radio" id="hocks-1" name="slide">
-        <label for="tela1"></label>
-        <img src="nike.jpg"/>
+
+<ul class="slider2">
+    <li class="OUS">
+        <input type="radio" id="slide4" name="slide" checked>
+        <label for="slide4"></label>
+        <img src="Tenis ous.jpg">
     </li>
 
-    <li class="hocks">
-        <input type="radio" id="hocks-1" name="slide">
-        <label for="tela1"></label>
-        <img src="nike.jpg"/>
+    <li class="tenis2">
+        <input type="radio" id="slide5" name="slide">
+        <label for="slide5"></label>
+        <img src="#">
+    </li>
+
+    <li class="tenis3">
+        <input type="radio" id="slide6" name="slide">
+        <label for="slide6"></label>
+        <img src="#">
     </li>
 </ul>
 
